feat: optimize sendMessagesWithFiles with parallel file upload using CompletableFuture